--- a/js/jcrop/css/jquery.Jcrop.css
+++ b/js/jcrop/css/jquery.Jcrop.css
@@ -11,6 +11,7 @@
 .jcrop-holder {
   direction: ltr;
   text-align: left;
+  max-width: 100%;
 }
 /* Selection Border */
 .jcrop-vline,
@@ -163,3 +164,5 @@
 img.jcrop-preview {
   max-width: none;
 }
+
+.jcrop-keymgr{opacity: 0;}
