--- a/js/jcrop/css/jquery.Jcrop.css
+++ b/js/jcrop/css/jquery.Jcrop.css
@@ -37,7 +37,7 @@
 /* Invisible click targets */
 .jcrop-tracker {
   height: 100%;
-  width: 100%;
+  width: 894px;
   /* "turn off" link highlight */
   -webkit-tap-highlight-color: transparent;
   /* disable callout, image save panel */
