--- a/css/custom.css
+++ b/css/custom.css
@@ -541,3 +541,11 @@ hr.team-page-thumbs {
 #instafeed a:hover .likes {
   opacity:1;
 }
+
+.leftpillstacked{
+  border-radius: 20px;
+}
+
+.rightpillcontent{
+  width: 80%;
+}
