Added Formatting for Search

--- a/css/custom.css
+++ b/css/custom.css
@@ -477,6 +477,11 @@ hr.team-page-thumbs {
   padding-top: 10px;
 }
 
+.shoeSearchPicture{
+  width: 15%;
+  height: 15%;
+}
+
 /* my media queries ============================================ */
 /* ========================================================== */
 
