--- a/css/custom.css
+++ b/css/custom.css
@@ -546,3 +546,34 @@ hr.team-page-thumbs {
 #instafeed a:hover .likes {
   opacity:1;
 }
+
+.colleft{
+   /*position: relative;*/
+   width: 100%;
+   height: 100px;
+   right: 85%;
+   /*background-color: #f4f4f4*/
+}
+.col1{
+  /*position: relative;*/
+  overflow: hidden;
+  float: left;
+  width: 13%;
+  left: 3%;
+  /*background-color: #e6e6e6*/
+}
+.col2{
+  /*position: relative;*/
+  overflow: hidden;
+  float: left;
+  padding-left: 15px;
+  width: 83%;
+  left: 101%;
+  /*background-color: #e6e6e6*/
+   
+}
+.footer{
+   float: left;
+   width: 100%;
+   /*background-color: #b4caf7*/
+}
