Messing with adding header through HTML file

--- a/css/custom.css
+++ b/css/custom.css
@@ -11,6 +11,7 @@ h4, .h4 {font-size: 1.125em;}
 
 .blue {color: #276E85;}
 .red {color: #D9562A;}
+.dark-grey {color: #7E7E7E;}
 .alt-hr {border-color: #bbb;}
 
 .well {background-color: #eee;}
