Nearly Functional Cart
Cart is nearly functional. The order of operations is off so the items
in the cart never get applied to the page. The “finalObj” is complete
and correct, it just doesn’t get applied at the right time.

--- a/css/custom.css
+++ b/css/custom.css
@@ -584,3 +584,18 @@ hr.team-page-thumbs {
   float: left;
   width: 48%;
 }
+
+.column-left-cart{
+  float: left;
+  width: 20%;
+}
+
+.column-right-cart{
+  float: right;
+  width: 20%;
+}
+
+.column-center-cart{
+  display: inline-block;
+  width: 59%;
+}
