--- a/css/custom.css
+++ b/css/custom.css
@@ -587,15 +587,33 @@ hr.team-page-thumbs {
 
 .column-left-cart{
   float: left;
-  width: 15%;
+  width: 10%;
 }
 
 .column-right-cart{
   float: right;
-  width: 20%;
+  width: 25%;
 }
 
 .column-center-cart{
   display: inline-block;
   width: 64%;
+}
+
+.checkoutBtn {
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: Arial;
+  color: #ff0000;
+  font-size: 20px;
+  background: #ffffff;
+  padding: 10px 20px 10px 20px;
+  border: solid #ff0000 4px;
+  text-decoration: none;
+}
+
+.checkoutBtn:hover {
+  background: #eaeaea;
+  text-decoration: none;
 }
