--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 20px;
+  xpadding-top: 20px;
   padding-bottom: 20px;
   font-size: 16px;
 }
@@ -616,4 +616,12 @@ hr.team-page-thumbs {
 .checkoutBtn:hover {
   background: #eaeaea;
   text-decoration: none;
+}
+
+body{
+  background-color: #6F6F6F;
+}
+
+.container{
+  background-color: #FFFFFF;
 }
